Replaced 'touch' by 'tap'.
BUG: 26884266
Change-Id: Ic3d7be8a10b768101b161644e46c92cd872621db

Former-commit-id: 8067aed5c7b476f758b3a234a41aabd9488863c7

--- a/packages/Shell/res/values/strings.xml
+++ b/packages/Shell/res/values/strings.xml
@@ -28,8 +28,8 @@
 
     <!-- Text of notification indicating that swipe left will share the captured bugreport. [CHAR LIMIT=100] -->
     <string name="bugreport_finished_text" product="watch">Swipe left to share your bug report</string>
-    <!-- Text of notification indicating that touching will share the captured bugreport. [CHAR LIMIT=100] -->
-    <string name="bugreport_finished_text" product="default">Touch to share your bug report</string>
+    <!-- Text of notification indicating that tapping will share the captured bugreport. [CHAR LIMIT=100] -->
+    <string name="bugreport_finished_text" product="default">Tap to share your bug report</string>
 
 
     <!-- Body of dialog informing user about contents of a bugreport. [CHAR LIMIT=NONE] -->
